Scrollbar Fixes

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Press+Start+2P&family=VT323&display=swap");
 @import url("https://fonts.cdnfonts.com/css/agustina");
 
+html {
+  scrollbar-color: #000 rgb(0, 0, 0, 0);
+}
+
 body {
   margin: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,7 +14,6 @@ body {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* scrollbar-color: #000 rgb(30, 30, 33); */
   background: var(--body-dark) !important;
   min-height: 100% !important;
   display: flex;
@@ -20,10 +23,12 @@ body {
 
 .body-dark {
   background: var(--body-dark) !important;
+  scrollbar-color: #000 rgb(30, 30, 33);
 }
 
 .body-light {
   background: var(--body-light) !important;
+  scrollbar-color: #000 var(--card-light);
 }
 
 .icon-box-light {
@@ -308,7 +313,7 @@ code {
   color: "amber[50]" !important;
 }
 
-.social-list {
+.content-list {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -319,12 +324,12 @@ code {
   flex-wrap: wrap;
 }
 
-.social-item .social-link {
+.content-item .content-link {
   filter: invert(0.5);
   width: 30px;
 }
 
-.social-item .social-link:hover {
+.content-item .content-link:hover {
   filter: invert(0);
 }
 
@@ -344,7 +349,7 @@ code {
 }
 
 .list {
-  overflow: auto;
+  overflow: hidden;
   animation: listOut ease 5s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
@@ -374,7 +379,7 @@ code {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  scrollbar-color: #000 rgb(30, 30, 33);
+  scrollbar-color: #000 var(--card-light);
   animation: listOut ease 5s;
   animation-iteration-count: 1;
   animation-fill-mode: both;
